--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,62 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+* {
+  margin: 0;
+  padding: 0;
+} 
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  height:100%;
+}
+
+header {
+  padding: 5px;
+  width: 100%;
+  /* position: relative; */
+  top: 0px;
+  background-color: darkblue;
+  align-items: center center;
+
+}
+header #navigation{
+  padding: 8px 20px;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  float: right;
+  color: white;
+}
+header h2{
+  padding: 0px;
+  margin: 0px;
+  text-align: center;
+  font-style: bold;
+  color: white;
+}
+
+.allButFooter  {
+  min-height: calc(100vh - 40px);
+  padding-bottom: 40px;
+  background-color: black;
+  color: white;
+}
+
+footer {
+  clear: both;
+  position: relative;
+  padding: 5px;
+  width: 100%;
+  height: 30px;
+  margin-top: -30px;
+  text-align: center;
+  background-color: darkgray;
+  align-items: center center;
+}
