--- a/src/index.css
+++ b/src/index.css
@@ -1,72 +1,39 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
 
 
 * {
   margin: 0;
   padding: 0;
 } 
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  height:100%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
 }
 
-header {
-  padding: 5px;
-  width: 100%;
-  /* position: relative; */
-  top: 0px;
-  background-color: darkblue;
-  align-items: center center;
 
-}
-header #navigation{
-  padding: 8px 20px;
-  position: absolute;
-  right: 0px;
-  top: 0px;
-  float: right;
-  color: white;
-}
-header h2{
+ h1{
   padding: 0px;
-  margin: 0px;
-  text-align: center;
-  font-style: bold;
-  color: white;
+  margin-bottom: 1rem;
+  font-size: 40px;
+
 }
 
-.allButFooter  {
-  min-height: calc(100vh - 40px);
-  padding-bottom: 40px;
-  background-color: black;
-  color: white;
+.input {
+  border: 1px solid #333333;
+  border-radius: .4em;
+  padding: .25rem;
+  width: 10em;
+  
 }
 
-footer {
-  clear: both;
-  position: relative;
-  padding: 5px;
-  width: 100%;
-  height: 30px;
-  margin-top: -30px;
-  text-align: center;
-  background-color: darkgray;
-  align-items: center center;
+select{
+  margin-left: .5rem;
+}
+
+.equals{
+  font-weight: bold;
+  font-size: 2rem;
 }
